--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,10 +6,7 @@
 
     <!-- Primary Meta Tags -->
     <title>HayViral Digital Agency</title>
-    <meta name="title" content="HayViral Digital Agency - Grow Your Business Online">
     <meta name="description" content="HayViral helps entrepreneurs and businesses 5x their growth with digital solutions, SEO, SMM, and web design tailored to your brand.">
-
-    <!-- Favicon -->
     <link rel="icon" type="image/png" href="/favicon.png" />
 
     <!-- Google Fonts -->
@@ -22,18 +19,17 @@
     <meta property="og:description" content="Helping businesses grow with digital solutions, web design, SEO, and SMM.">
     <meta property="og:image" content="/og-image.png">
 
-
+    <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://hayviral.com/">
     <meta property="twitter:title" content="HayViral Digital Agency">
     <meta property="twitter:description" content="Helping businesses grow with digital solutions, web design, SEO, and SMM.">
     <meta property="twitter:image" content="/og-image.png">
-
-  
-    <link rel="canonical" href="https://hayviral.com/" />
   </head>
-  <body>
+  <body class="font-outfit bg-white text-black">
     <div id="root"></div>
+
+    <!-- This is REQUIRED for React to render -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
