--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Primary Meta Tags -->
     <title>HayViral Digital Agency</title>
     <meta name="description" content="HayViral helps entrepreneurs and businesses 5x their growth with digital solutions, SEO, SMM, and web design tailored to your brand.">
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="./favicon.png" />
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -17,19 +17,18 @@
     <meta property="og:url" content="https://hayviral.com/">
     <meta property="og:title" content="HayViral Digital Agency">
     <meta property="og:description" content="Helping businesses grow with digital solutions, web design, SEO, and SMM.">
-    <meta property="og:image" content="/og-image.png">
+    <meta property="og:image" content="./og-image.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://hayviral.com/">
     <meta property="twitter:title" content="HayViral Digital Agency">
     <meta property="twitter:description" content="Helping businesses grow with digital solutions, web design, SEO, and SMM.">
-    <meta property="twitter:image" content="/og-image.png">
+    <meta property="twitter:image" content="./og-image.png">
   </head>
   <body class="font-outfit bg-white text-black">
     <div id="root"></div>
-
-    <!-- This is REQUIRED for React to render -->
-    <script type="module" src="/src/main.jsx"></script>
+    <!-- Use relative path for main.jsx -->
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
