--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>HayViral Digital Agency</title>
     <meta name="description" content="HayViral helps entrepreneurs and businesses 5x their growth with digital solutions, SEO, SMM, and web design tailored to your brand.">
     <link rel="icon" type="image/png" href="./favicon.png" />
-
+<link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700&display=swap" rel="stylesheet">
 
