--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <body class="font-outfit bg-white text-black">
     <div id="root"></div>
     <!-- Use relative path for main.jsx -->
-    <script type="module" src="./src/main.jsx"></script>
+   <script type="module" src="/src/main.jsx"></script>
+
   </body>
 </html>
