Change title and Open Graph title to 'HayViral'
Updated the title and Open Graph title for branding consistency.

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>HayViral Digital Agency</title>
+    <title>HayViral</title>
     <meta name="description" content="HayViral helps entrepreneurs and businesses 5x their growth with digital solutions, SEO, SMM, and web design tailored to your brand.">
     <link rel="icon" type="image/png" href="./favicon.png" />
-<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+<link rel="icon" type="image/svg+xml" href="./favicon.png" />
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://hayviral.com/">
-    <meta property="og:title" content="HayViral Digital Agency">
+    <meta property="og:title" content="HayViral">
     <meta property="og:description" content="Helping businesses grow with digital solutions, web design, SEO, and SMM.">
     <meta property="og:image" content="./og-image.png">
 
