--- a/index.html
+++ b/index.html
@@ -5,31 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>HayViral</title>
-    <meta name="description" content="HayViral helps entrepreneurs and businesses 5x their growth with digital solutions, SEO, SMM, and web design tailored to your brand.">
+    <title>HayViral AI SaaS for Business Growth & Automation</title>
+    <meta
+      name="description"
+      content="HayViral is an AI-powered SaaS platform helping businesses scale faster with smart automation, AI marketing, analytics, and digital growth solutions."
+    />
+
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="./favicon.png" />
-<link rel="icon" type="image/svg+xml" href="./favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.png" />
+
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://hayviral.com/">
-    <meta property="og:title" content="HayViral">
-    <meta property="og:description" content="Helping businesses grow with digital solutions, web design, SEO, and SMM.">
-    <meta property="og:image" content="./og-image.png">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://hayviral.com/" />
+    <meta property="og:title" content="HayViral — AI SaaS for Growth & Automation" />
+    <meta
+      property="og:description"
+      content="Scale smarter with HayViral — an AI-powered SaaS platform for automation, intelligent marketing, analytics, and business growth."
+    />
+    <meta property="og:image" content="./og-image.png" />
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://hayviral.com/">
-    <meta property="twitter:title" content="HayViral Digital Agency">
-    <meta property="twitter:description" content="Helping businesses grow with digital solutions, web design, SEO, and SMM.">
-    <meta property="twitter:image" content="./og-image.png">
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://hayviral.com/" />
+    <meta property="twitter:title" content="HayViral — AI-Powered SaaS Platform" />
+    <meta
+      property="twitter:description"
+      content="An AI-driven SaaS platform built to automate growth, marketing, and business intelligence — all in one place."
+    />
+    <meta property="twitter:image" content="./og-image.png" />
   </head>
+
   <body class="font-outfit bg-white text-black">
     <div id="root"></div>
-    <!-- Use relative path for main.jsx -->
-   <script type="module" src="/src/main.jsx"></script>
-
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
