Update title in index.html to 'HayViral'

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>HayViral AI SaaS for Business Growth & Automation</title>
+    <title>HayViral</title>
     <meta
       name="description"
       content="HayViral is an AI-powered SaaS platform helping businesses scale faster with smart automation, AI marketing, analytics, and digital growth solutions."
